<resources>
    <string name="app_name">Intent</string>
    <string name="move">Pindah ke Activity Baru</string>
    <string name="move_data">Pindah ke Activity Baru dengan Data</string>
    <string name="move_object">Pindah ke Activity Baru dengan Object</string>
    <string name="title">Project Intent Implicit dan Explicit</string>
    <string name="title_second">Second Page dengan Intent Biasa</string>
    <string name="title_data">Data Received</string>
    <string name="title_dial">Kontak Langsung</string>
    <string name="title_app">Buka Aplikasi Lain</string>
    <string name="add_data">Tambah Data</string>
    <string name="result">Result dari Tambah Data</string>

    <string name="gender">Jenis Kelamin</string>
    <string name="male">Laki-laki</string>
    <string name="female">Perempuan</string>
    <string name="save">Simpan</string>
</resources>