<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/btn_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btn_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_data"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btn_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_object" />

</LinearLayout>